# regspline

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  test.yml
examples/: basic_example.py  example_quantile_regression.py  example_spline_from_data.py  plot_basis_functions.py
regspline/: __init__.py  base.py  bases.py  linear_spline.py  natural_cubic_spline.py  util.py
tests/: test_cubic_spline.py  test_linear_spline.py  test_other.py
