[project]
name = "regspline"
description = "Regression spline"
version = "25.7.1"
authors = [{ name = "Martin van der Schans" }]
readme = "README.md"
keywords = ["statistics", "regression", "splines"]
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "statsmodels"]
license = { text = "BSD-3-Clause" }

[project.urls]
repository = "https://github.com/mvds314/regspline"

[project.optional-dependencies]
SVR = ["scikit-learn"]
LASSO = ["cvxopt!=1.3.0"] # Note: 1.3.0 has a domain error bug:
FASTQR = ["pyqreg"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W"] # Pycodestyle, pyflakes, bugbear, and isort
ignore = [
  # Ignore common conflicts with Blackjj
  "E203",
  "E501",
  "E731", # Ignore lamda expression warning
  "E402", # Ignore module level import not at top of file
]

[tool.pytest.ini_options]
markers = [
  "tofix: marks tests as to be fixed (deselect with '-m \"not tofix\"')",
]
